@@ -60,6 +60,28 @@ name|DataTransferProtos
 operator|.
 name|Status
 operator|.
+name|ERROR_ACCESS_TOKEN
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
+name|proto
+operator|.
+name|DataTransferProtos
+operator|.
+name|Status
+operator|.
 name|ERROR_INVALID
 import|;
 end_import
@@ -104,45 +126,7 @@ name|DataTransferProtos
 operator|.
 name|Status
 operator|.
-name|ERROR_ACCESS_TOKEN
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|protocol
-operator|.
-name|proto
-operator|.
-name|DataTransferProtos
-operator|.
-name|Status
-operator|.
 name|SUCCESS
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|util
-operator|.
-name|Time
-operator|.
-name|now
 import|;
 end_import
 
@@ -163,6 +147,22 @@ operator|.
 name|DataNode
 operator|.
 name|DN_CLIENTTRACE_FORMAT
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|Time
+operator|.
+name|now
 import|;
 end_import
 
@@ -350,20 +350,6 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|fs
-operator|.
-name|InvalidRequestException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
 name|hdfs
 operator|.
 name|ExtendedBlockId
@@ -483,6 +469,24 @@ operator|.
 name|datatransfer
 operator|.
 name|DataTransferEncryptor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
+name|datatransfer
+operator|.
+name|DataTransferEncryptor
 operator|.
 name|InvalidMagicNumberException
 import|;
@@ -503,24 +507,6 @@ operator|.
 name|datatransfer
 operator|.
 name|DataTransferProtoUtil
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|protocol
-operator|.
-name|datatransfer
-operator|.
-name|DataTransferEncryptor
 import|;
 end_import
 
@@ -1718,10 +1704,9 @@ name|Throwable
 name|t
 parameter_list|)
 block|{
-name|LOG
-operator|.
-name|error
-argument_list|(
+name|String
+name|s
+init|=
 name|datanode
 operator|.
 name|getDisplayName
@@ -1750,13 +1735,71 @@ literal|" src: "
 operator|+
 name|remoteAddress
 operator|+
-literal|" dest: "
+literal|" dst: "
 operator|+
 name|localAddress
+decl_stmt|;
+if|if
+condition|(
+name|op
+operator|==
+name|Op
+operator|.
+name|WRITE_BLOCK
+operator|&&
+name|t
+operator|instanceof
+name|ReplicaAlreadyExistsException
+condition|)
+block|{
+comment|// For WRITE_BLOCK, it is okay if the replica already exists since
+comment|// client and replication may write the same block to the same datanode
+comment|// at the same time.
+if|if
+condition|(
+name|LOG
+operator|.
+name|isTraceEnabled
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|trace
+argument_list|(
+name|s
 argument_list|,
 name|t
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+name|s
+operator|+
+literal|"; "
+operator|+
+name|t
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+name|s
+argument_list|,
+name|t
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 finally|finally
 block|{
